--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -26,6 +26,10 @@ http {
     port_in_redirect off;
     absolute_redirect off;
 
+    if ($http_x_forwarded_ssl = "off") {
+      return 301 https://$host$request_uri;
+    }
+
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://api.mapbox.com; img-src data: blob: *; media-src data: *; script-src 'self' https://api.mapbox.com; connect-src 'self' https://api.mapbox.com https://events.mapbox.com https://*.tiles.mapbox.com https://gunslinger.utf9k.net ; worker-src 'self' blob: ; script-src-elem 'self' https://unpkg.com/netlify-cms@%5E2.0.0/dist/netlify-cms.js https://api.mapbox.com https://platform.twitter.com ; frame-src 'self' https://www.youtube.com https://platform.twitter.com ; child-src 'self' blob: ;" always;
     add_header X-Frame-Options SAMEORIGIN always;
